--- a/test/index.html
+++ b/test/index.html
@@ -29,10 +29,10 @@
       <!-- two new images below hero image -->
       <div class="row">
           <div class="column">
-            <img src="../assets/Tout 1.jpg"  style="width:100%">
+            <img src="./assets/tout_1.jpg"  style="width:100%">
           </div>
           <div class="column">
-            <img src="../assets/Tout 2.jpg"  style="width:100%">
+            <img src="./assets/tout_2.jpg"  style="width:100%">
           </div>
         </div>
 
