--- a/test/index.html
+++ b/test/index.html
@@ -27,7 +27,8 @@
       </div>
 
       <!-- two new images below hero image -->
-      <div class="row">
+      <div class="row game-title-container">
+
           <div class="column">
             <img src="./assets/tout_1.jpg"  style="width:100%">
           </div>
@@ -35,6 +36,7 @@
             <img src="./assets/tout_2.jpg"  style="width:100%">
           </div>
         </div>
+      
 
 
 
