--- a/test/index.html
+++ b/test/index.html
@@ -19,7 +19,7 @@
   <!-- hero image -->
     <div class="hero-image">
         <div class="hero-text">
-          <p>The world's first independent developer and distributor of video console games &amp one of the largest third party video
+          <p>The world's first independent developer and distributor of video console games &amp; one of the largest third party video
               game publishers in the world.</p>
               <button class="button" id="learn-more">
                   LEARN MORE</button>
@@ -30,10 +30,10 @@
       <div class="row game-title-container">
 
           <div class="column">
-            <img src="./assets/tout_1.jpg"  style="width:100%">
+            <img src="./assets/tout_1.jpg">
           </div>
           <div class="column">
-            <img src="./assets/tout_2.jpg"  style="width:100%">
+            <img src="./assets/tout_2.jpg">
           </div>
         </div>
       
