--- a/test/index.html
+++ b/test/index.html
@@ -2,76 +2,45 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html;">
-  <meta name="keywords" content="HTML5 Template" />
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-
-  <title></title>
+  <meta name="keywords" content="Activision, Awesome">
+  <meta name="description" content="Jameel's Test">
+  <meta name="author" content="Jameel Matin">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <title>Jameel's Activison Test</title>
   <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
-  <link rel="stylesheet" href="styles/styles.css">
-  <link rel="stylesheet" href="styles/modal.css">
+  <link rel="stylesheet" href="./styles/styles.css">
+  <link rel="stylesheet" href="./styles/modal.css">
 </head>
+
 <body>
-
   <!-- hero image -->
-    <div class="hero-image">
-        <div class="hero-text">
-          <p>The world's first independent developer and distributor of video console games &amp; one of the largest third party video
-              game publishers in the world.</p>
-              <button class="button" id="learn-more">
-                  LEARN MORE</button>
-        </div>
-      </div>
+  <div class="hero-image">
+    <div class="hero-text">
+      <p>The world's first independent developer and distributor of video console games &amp; one of the largest third party
+        video game publishers in the world.</p>
+      <button class="button" id="learn-more">LEARN MORE</button>
+    </div>
+  </div>
 
-      <!-- two new images below hero image -->
-      <div class="row game-title-container">
-
-          <div class="column">
-            <img src="./assets/tout_1.jpg">
-          </div>
-          <div class="column">
-            <img src="./assets/tout_2.jpg">
-          </div>
-        </div>
-      
-
-
-
-
-
-
-
-
-
-
-      <!-- code that needs to get refractored -->
-  <!-- <div class="center bottom">
-    <p>The world's first independent developer and distributor of video console games & one of the largest third party video
-      game publishers in the world.</p>
-
-    <button class="button" id="learn-more">
-      LEARN MORE</button>
-      
-  </div> -->
+  <!-- two new images below hero image -->
+  <div class="row game-title-container">
+    <div class="column">
+      <img src="./assets/tout_1.jpg">
+    </div>
+    <div class="column">
+      <img src="./assets/tout_2.jpg">
+    </div>
+  </div>
 
   <!-- Modal -->
   <div id="myModal" class="modal">
-
     <!-- Modal content -->
     <div class="modal-content">
       <span class="close">&times;</span>
-      <iframe height="315" src="https://www.youtube.com/embed/qVW6lOQziYM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <iframe height="315" id="iframeYoutube" src="https://www.youtube.com/embed/qVW6lOQziYM" frameborder="0" allow="autoplay; encrypted-media"
+        allowfullscreen></iframe>
     </div>
-
   </div>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-  <script src="js/main.js"></script>
-
+  <script src="./js/main.js"></script>
 </body>
-
 </html>
